# autopaper-researcher

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: livestock_decision_support.env  ollama_local.env  researcher_template.env
scripts/: backup_and_cleanup_attachments.py  bootstrap_and_run.sh  daily_research_ingest.py  import_pdf_files_for_collection.py  ingest_latest_paper.py  purge_my_library_attachments.py
src/autopaper/: __init__.py  cleanup.py  cli.py  config.py  daemon.py  job_runner.py  launchd.py  logging.py  models.py  query_presets.py  ranking.py  reports.py  state.py  utils.py
src/autopaper/sources/: __init__.py  arxiv.py  base.py  openalex.py  pubmed.py
src/autopaper/summaries/: __init__.py  base.py  command.py  offline.py  openai_compatible.py
src/autopaper/zotero/: __init__.py  client.py  notes.py  pdf_import.py  pdf_sourcing.py
